# whisperx-replicate

./: .gitignore  README.md  cog.yaml  copy_models.sh  ctc_alignment.py  download_model.sh  get_models.py  local_cache.py  main.py  pipeline.py  predict.py  pyproject.toml  requirements.in  requirements.txt  sitecustomize.py  srt_formatter.py  time_transcription.py  use_replicate_model.py
scripts/: download_assets.py
vad_diarization/: __init__.py  base.py  combined.py  diarization.py  utils.py  vad.py
